[package]
name = "lending"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version="0.32.1", features=["init-if-needed"] }
anchor-spl = "0.32.1"
pyth-sdk-solana = "0.10.6"
pyth-solana-receiver-sdk = "1.1.0"
